Adds support of custom schema naming